# Adrijan-Petek

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.example.json  config.json  daily_readme.py  profile_generator.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: daily-readme.yml  update-profile.yml
assets/: ascii_art.py
docs/: api.md  development.md
scripts/: sync_projects_github.py
templates/components/: fun.py  header.py  init.py  learning.py  projects.py  stats.py  support.py
tests/: __init__.py  conftest.py  test_generator.py
